# programmiersprachen-aufgabenblatt-3

./: .gitignore  CMakeLists.txt  README.md  programmiersprachen-aufgabenblatt-3.sublime-project
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  doctest.yml
source/: CMakeLists.txt  list.hpp  list_iterator.hpp  list_node.hpp  tests.cpp
source/sub_tests/: back.test  begin.test  default_constructed_list.test  end.test  front.test  pop_back.test  pop_front.test  push_back.test  push_front.test
source/sub_tests/iterators/: operator_arrow.test  operator_does_not_equal.test  operator_equals.test  operator_iterate_forward.test  operator_star.test
